<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".StartMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:src="@drawable/memgame_title" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/play_label" />

    <Button
        android:id="@+id/button_scores"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorBrightOrange"
        android:text="@string/score_label" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorBlack"
        android:textColor="@color/colorWhite"
        android:text="@string/about_label" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>