<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorWhite"
    tools:context=".About">


    <Button
        android:id="@+id/exit_about"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/exit_label"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_about">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dev_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_dev_label"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:gravity="center_horizontal" />

            <ImageView
                android:id="@+id/app_onlyDev"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:paddingVertical="40dp"
                android:src="@drawable/jamespic" />

            <TextView
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/dev_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:text="@string/author_desc"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:gravity="center_horizontal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>